--- a/environment.yml
+++ b/environment.yml
@@ -2,26 +2,14 @@ name: minitorch
 channels:
   - conda-forge
 dependencies:
-  - bzip2=1.0.8
-  - ca-certificates=2025.6.15
-  - libexpat=2.7.0
-  - libffi=3.4.6
-  - liblzma=5.8.1
-  - libsqlite=3.50.2
-  - libzlib=1.3.1
-  - ncurses=6.5
-  - openssl=3.5.0
-  - pip=25.1.1
-  - python=3.11.13
-  - readline=8.2
-  - setuptools=80.9.0
-  - tk=8.6.13
-  - tzdata=2025b
-  - wheel=0.45.1
+  - python=3.11
+  - pip
+  - pylint             # let conda choose compatible version
+  - datasets=2.4.0
+  - dill               # conda will solve the version to satisfy both
   - pip:
       - altair==4.2.2
       - colorama==0.4.3
-      - datasets==2.4.0
       - embeddings==0.0.8
       - hypothesis==6.54.0
       - networkx==3.3
